needs left column to align items correctly

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(248,248,248);
+}
+
 .Main-Container {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -6,18 +10,22 @@
 
 .left-column {
     grid-template-columns: 0;
+    
 }
 
 
 .jobTitle {
-    font-size: 22px;
-    margin: 20px;    
+    font-size: 22px;    
     color:  rgb(213,196,85);
+    
 }
 
 
 .name {
-    font-size: 100px;
+    font-size: 130px;
+    color: rgb(34,34,34);
+    margin-top: 190px;
+    margin-left: 190px;
 }
     
 #profilePic {
@@ -40,7 +48,17 @@
     background-color: rgb(213,196,85);
     text-align:center;
     transition: all 0.15s;
+    margin-left: 190px
 }
 
+.hire {
+    display: inline-block;
+    height: 50px;
+    width: 100px;
+    background-color: rgb(255,255,255);
+    border-color: rgb(255,255,255);
+    font-weight: bold;
 
+
+}
 
